fixed sidebar details spacing

--- a/app/assets/stylesheets/profile/sidebar_intro.css
+++ b/app/assets/stylesheets/profile/sidebar_intro.css
@@ -235,7 +235,7 @@
     margin-right: 5px;
 }
 
-.profile-sidebar-details-hometown-container > i {
+li.profile-sidebar-details-hometown-container > i {
     margin-left: 3px;
     margin-right: 10px;
 }
